--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_bloc: ^8.1.6
+  path_provider: ^2.1.4
+  flutter_svg: ^2.0.10+1
+  package_info_plus: ^4.2.0
+  shared_preferences: ^2.3.1
+  equatable: ^2.0.5
+  firebase_core: ^2.24.2
+  connectivity_plus: ^6.0.4
 
 dev_dependencies:
   flutter_test:
@@ -58,10 +66,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/png/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
