--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   equatable: ^2.0.5
   firebase_core: ^2.24.2
   connectivity_plus: ^6.0.4
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
