Added Bloc and screen test
Added Bloc and screen test

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,11 @@ dependencies:
   shared_preferences: ^2.3.1
   equatable: ^2.0.5
   firebase_core: ^2.24.2
-  connectivity_plus: ^6.0.4
+#  connectivity_plus: ^6.0.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  get_it: ^7.2.0
+  injectable: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +58,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  bloc_test: ^9.1.7
+  mockito:
+  mocktail:
+  injectable_generator:
+  build_runner:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
